--- a/style.css
+++ b/style.css
@@ -18,7 +18,7 @@ body {
 	top: 0;
 	left: 0;
 	width: 100%;
-	padding: 20px 10%;
+	padding: 10px 10%;
 	background: transparent;
 	display: flex;
 	justify-content: space-between;
@@ -26,11 +26,22 @@ body {
 	z-index: 100;
 }
 .logo {
-	font-size: 25px;
-	color: #ededed;
-	text-decoration: none;
-	font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: #EFEFEF;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+    background: linear-gradient(90deg, #3498db, #e74c3c); 
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+	margin-top: 30px;
 }
+
+
 
 .logo::before {
 	content: '';
@@ -45,11 +56,11 @@ body {
 }
 
 .navbar a{
-	font-size: 18px;
+	font-size: 24px;
 	color: #ededed;
 	text-decoration: none;
 	font-weight: 500;
-	margin-left: 35px;
+	margin-left: 30px;
 	transition: .3s;
 }
 
@@ -243,29 +254,32 @@ body {
 
 
 
-@media screen and (max-width: 600px) 
-{
-	.home-content h1{
-		font-size: 36px;
-		line-height: 50px;
-	}
-	.home-content h2 {
-		font-size: 36px;
-		line-height: 50px;
-	}
-	.navbar a{
-		font-size: 15px;
-		margin-left: 20px;
+@media screen and (max-width: 600px) {
+	.logo {
+    font-size: 24px;
+    margin-left: -30px;
+    margin-top: 18px;
 
 	}
-	.home {
-		background-image: linear-gradient(#000e2e, #004f5a);
-	}
+    .navbar {
+        margin-top: 70px; /* Add this line to adjust the margin-top of the navbar */
+		position: inherit;
+		margin-left: 100px;
 
-	.home-content p {
-		position: relative;
-		font-size: 10px;
-		margin: 10px 0 10px;
+    }
 
-	}
+    .navbar a {
+        font-size: 14px;
+        margin-left: 3px;
+    }
+
+    .home {
+        background-image: linear-gradient(#000e2e, #004f5a);
+    }
+
+    .home-content p {
+        position: relative;
+        font-size: 10px;
+        margin: 10px 0 10px;
+    }
 }
