--- a/style2.css
+++ b/style2.css
@@ -1,8 +1,9 @@
-*{
+* {
     margin: 0;
     padding: 0;
     font-family: 'Roboto', sans-serif;
 }
+
 .container {
     width: 100%;
     height: 100vh;
@@ -12,28 +13,36 @@
     padding-left: 8%;
     padding-right: 8%;
     box-sizing: border-box;
-
 }
-.navbar a{
-font-size: 18px;
-	color: #ededed;
-	text-decoration: none;
-	font-weight: 500;
-	margin-left: 35px;
-	transition: .3s;
+
+.navbar a {
+    font-size: 24px;
+    color: #ededed;
+    text-decoration: none;
+    font-weight: 500;
+    transition: .3s;
 }
 
 .navbar a:hover,
 .navbar a.active {
-	color: #00abf0;
+    color: #00abf0;
 }
 
-
 .logo {
-	font-size: 25px;
-	color: #ededed;
-	text-decoration: none;
-	font-weight: 600;
+    font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif;
+    font-size: 50px;
+    font-weight: bold;
+    letter-spacing: 2px;
+    color: #EFEFEF;
+    text-decoration: none;
+    text-transform: uppercase;
+    transition: color 0.3s ease-in-out, text-shadow 0.3s ease-in-out;
+    background: linear-gradient(90deg, #3498db, #e74c3c);
+    background-clip: text;
+    -webkit-background-clip: text;
+    color: transparent;
+    top: 30px; 
+    position: relative;
 }
 
 .logo::before {
@@ -64,6 +73,7 @@ nav ul li {
     display: inline-block;
     margin-left: 60px;
 }
+
 nav ul li a {
     text-decoration: none;
     color: #fff;
@@ -85,11 +95,22 @@ h1 {
     font-size: 100px;
 }
 
+h1::before{
+    content: '';
+	position: absolute;
+	top: 0;
+	right: 0;
+	width: 100%;
+	height: 100%;
+	background: #081b29;
+	animation: showRight 1s ease forwards;
+	animation-delay: 1s;
+}
 
 
 p {
     color: #fff;
-    font-size: 11px;
+    font-size: 14px;
     line-height: 15px;
 }
 
@@ -153,18 +174,20 @@ h5 {
     text-shadow: 0 0 5px #999;
 }
 
-
-
-
 @keyframes showRight {
-	100% {
-		width: 0;
-	}
+    100% {
+        width: 0;
+    }
 }
 
 @media screen and (max-width: 768px) {
+    .logo {
+        font-size: 24px;
+        top: 20px; 
+        right: 20px;
+    }
     .navbar a {
-        margin-left: 10px;
+        font-size: 14px;
     }
 
     .menu-icon {
@@ -191,12 +214,14 @@ h5 {
         margin-top: 15px;
     }
 
-    h1, p, button {
-        display: block; /* Change to block layout for smaller screens */
+    h1,
+    p,
+    button {
+        display: block;
     }
 
     .card {
-        height: 150px;
+        height: 100px;
         margin-top: 15px;
         display: block;
         width: 100%;
